# MPAS-Model

./: .gitignore  .gitmodules  CMakeLists.txt  HYDRO.README.md  Makefile  README.md
cmake/Functions/: MPAS_Functions.cmake
cmake/Modules/: FindPnetCDF.cmake
src/: Makefile
src/core_atmosphere/: CMakeLists.txt  Externals.cfg  Makefile  Registry.xml  mpas_atm_core.F
src/core_atmosphere/couple/nuopc/: CMakeLists.txt  Makefile  README.md  esmDriver.F90  mpas_atm_nuopc.F90  mpas_atm_nuopc_cap.F90  mpas_atm_nuopc_gluecode.F90  mpas_fields.F90  mpas_nuopc_utils.F90
src/core_atmosphere/dynamics/: Makefile  mpas_atm_boundaries.F  mpas_atm_time_integration.F
src/core_atmosphere/nuopc/: CMakeLists.txt  HYDRO.README.md  Makefile  mpas_atm_nuopc.F90  mpas_fields.F90  mpas_nuopc_atm.F90
src/core_atmosphere/physics/: .gitignore  Makefile  Makefile.ccpp  Registry_noahmp.xml  mpas_atmphys_driver_lsm.F  mpas_atmphys_driver_lsm_noahmp.F  mpas_atmphys_vars.F
src/core_atmosphere/physics/physics_noahmp/drivers/mpas/: Makefile  NoahmpIOVarFinalizeMod.F90  NoahmpIOVarInitMod.F90  NoahmpIOVarType.F90  NoahmpReadNamelistMod.F90
src/core_atmosphere/physics/physics_wrf/: Makefile  module_mp_kessler.F
src/core_atmosphere/utils/: Makefile
src/core_init_atmosphere/: Makefile  Registry.xml
src/core_landice/: Makefile  Registry.xml
src/core_ocean/: Makefile  Registry.xml
src/core_seaice/: Makefile  Registry.xml
src/core_sw/: Makefile  Registry.xml
src/core_test/: Makefile  Registry.xml
src/driver/: mpas_subdriver.F
src/framework/: CMakeLists.txt  Makefile  mpas_io.F  mpas_io_types.inc  mpas_stream_manager.F  xml_stream_parser.c
src/tools/registry/: CMakeLists.txt  gen_inc.c
testing_and_setup/nuopc/atmosphere/: .gitignore  README.md  all_tests.ini  esmx_build_atm.yml  mpas_nuopc_atm_test.py
testing_and_setup/nuopc/atmosphere/input/: fd_mpas.yml  run_atm.yml  run_atmocn.yml
